replacing index file without slashes

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>calc</title>
     <style>
       :root {
-        --Button-them : url('/Them/Snow-Button.webp');
-        --calc-them: url('/Them/Snow-Calc.webp');
-        --ThemS-them: url('/Them/Fall3.webp');
+        --Button-them : url('Them/Snow-Button.webp');
+        --calc-them: url('Them/Snow-Calc.webp');
+        --ThemS-them: url('Them/Fall3.webp');
         --clr-Button: #707070;
         --clr-Button-hover: #00FFEC;
         --clr-display: #08E2E6;
@@ -21,16 +21,16 @@
       }
       @font-face{
         font-family: 'wargate';
-        src: url('/Font/Wargate.ttf');
+        src: url('Font/Wargate.ttf');
         format: 'ttf';
       }
       body{
         background: var(--clr-body-back);
       }
       body.Fall {
-        --Button-them : url('/Them/Button-back.webp');
-        --calc-them: url('/Them/display-back.webp');
-        --ThemS-them: url('/Them/Snow1.webp');
+        --Button-them : url('Them/Button-back.webp');
+        --calc-them: url('Them/display-back.webp');
+        --ThemS-them: url('Them/Snow1.webp');
         --clr-Button: black;
         --clr-Button-hover: #FF9B00;
         --clr-display: #FFA908;
@@ -140,7 +140,7 @@
         document.querySelector('.display').value += V;
       }
       function playSound(){
-        var sound = new Audio('/KeySound/Key.mp3');
+        var sound = new Audio('KeySound/Key.mp3');
         sound.play();
       }
       function AC(){
