--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         background: var(--calc-them);
         background-size: 100%;
         background-position: left;
+        overflow: hidden;
       }
       .btns {
         display: flex;
