Adding Background size

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         border-radius: 20px;
         background: var(--calc-them);
         background-repeat: no-repeat;
+        background-size: 100%;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
